# secapi

./: .env.dev  .env.example  .env.prod  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
.claude/: CLAUDE.md  project.md
.claude/agents/: fastapi-backend-architect.md  infrastructure-automation.md  security-tools-expert.md  test-runner.md
alembic/: env.py  script.py.mako
app/: __init__.py  main.py  worker.py
app/api/v1/: router.py
app/core/: __init__.py  celery.py  config.py  dependencies.py  email.py  logging.py  security.py
app/db/: __init__.py  base.py  models.py  session.py
app/scanners/: __init__.py  base.py  exceptions.py  trivy.py
app/schemas/: auth.py  common.py  scan.py  user.py
app/tasks/: __init__.py  scan_tasks.py
app/templates/: index.html
app/worker/: __init__.py  celery_app.py  tasks.py
helm/secapi/: Chart.yaml  README.md  values.yaml
helm/secapi/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment-flower.yaml  deployment-postgres.yaml  deployment-redis.yaml  deployment-worker.yaml  deployment.yaml  ingress.yaml  namespace.yaml  pdb.yaml  pvc.yaml  secret.yaml  service-flower.yaml  service.yaml  (+3 more)
implementation/: phase1-1.md  phase1-2.md  phase1-3.md  phase1.md  phase2.md  phase3.md  phase4.md
scripts/: seed_dev_user.py
tests/: conftest.py  test_main.py  test_schemas.py
tests/integration/: docker-compose-checklist.md  kubernetes-checklist.md
tests/test_api/: test_auth.py  test_scans.py
tests/test_scanners/: test_trivy.py
(+3 files in other folders)
